<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ItemDescActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:gravity="top">

        <ImageView
            android:id="@+id/ivItemLogo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@null"
            android:src="@drawable/samsung_logo" />

        <ImageView
            android:id="@+id/ivItemImage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_below="@id/ivItemLogo"
            android:contentDescription="@null"
            android:src="@drawable/s23" />

        <Space
            android:id="@+id/spaceTwo"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_below="@id/ivItemImage" />

        <TextView
            android:id="@+id/tvItemName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/spaceTwo"
            android:gravity="center"
            android:text="@string/txtItemName" />

        <TextView
            android:id="@+id/tvItemModel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvItemName"
            android:gravity="center"
            android:text="@string/txtItemModel" />

        <Space
            android:id="@+id/spaceThree"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_below="@id/tvItemModel" />

        <TextView
            android:id="@+id/tvItemDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/spaceThree"
            android:gravity="center"
            android:text="@string/txtItemDesc" />

        <Space
            android:id="@+id/spaceFour"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_below="@id/tvItemDesc" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnHome"
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:layout_below="@id/spaceFour"
            android:layout_centerInParent="true"
            android:background="@drawable/add_to_cart_button"
            android:gravity="center"
            android:text="@string/lblHome"
            android:textColor="@color/white" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>