<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ItemListing">

    <RelativeLayout
        android:id="@+id/rlOne"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="0dp">

        <TextView
            android:id="@+id/tvAvailableItems"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="@string/lblAvailableItems"
            android:textSize="20sp" />

        <Space
            android:id="@+id/spaceOne"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_below="@id/tvAvailableItems" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/spaceOne"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Space
            android:id="@+id/spaceTwo"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_below="@id/recyclerView" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:gravity="bottom">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnViewCart"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/lblViewCart" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnBack"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/btnViewCart"
            android:text="@string/lblBack" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>